--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 .header {
     display: flex;
     height: 30px;
-    width: 1440px;
 }
 
 .nav {
@@ -27,7 +26,7 @@ body {
     font-size: 25px;
 }
 .links {
-    margin: 0px 10px 0px 10px;
+    margin: 0px 10px;
     text-decoration: none;
     color: black;
     text-transform: capitalize;
@@ -44,7 +43,6 @@ body {
 
 .first_page {
     display: flex;
-    height: 900px;
 }
 
 .main_photo {
@@ -63,14 +61,22 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 55px;
     flex-grow:1;
-    padding: 0px 0px 130px 150px;
+    padding-left: 150px;
 }
 
 .photo {
     flex-grow: 1; 
-    padding: 0px 0px 200px 0px; 
+    padding-bottom: 65px;
+    
 }
 .btn{
-    
-    border-radius: 50%;
+    border-radius: 30px;
+    width: 130px;
+    height: 35px;
+    font-size: 25px;
+}
+.button_container{
+width: 720px;
+padding-bottom: 150px;
+padding-left: 150px;
 }
