--- a/style.css
+++ b/style.css
@@ -22,9 +22,11 @@ body {
     width: 80%;
 
 }
-.logo{
+
+.logo {
     font-size: 25px;
 }
+
 .links {
     margin: 0px 10px;
     text-decoration: none;
@@ -41,7 +43,7 @@ body {
     font-size: 25px;
 }
 
-.first_page {
+.section_wrapper {
     display: flex;
 }
 
@@ -50,33 +52,93 @@ body {
     width: 609px;
 
 }
-.column{
+
+.column {
     width: 720px;
     height: 900px;
     display: flex;
     align-items: flex-end;
 }
+
 .catch_phrase {
-    text-align:left;
+    text-align: left;
     font-family: 'Roboto', sans-serif;
-    font-size: 55px;
-    flex-grow:1;
+    font-size: 45px;
+    flex-grow: 1;
     padding-left: 150px;
 }
 
 .photo {
-    flex-grow: 1; 
+    flex-grow: 1;
     padding-bottom: 65px;
-    
+
 }
-.btn{
-    border-radius: 30px;
+
+.btn {
+    border-radius: 32px;
     width: 130px;
     height: 35px;
     font-size: 25px;
 }
-.button_container{
-width: 720px;
-padding-bottom: 150px;
-padding-left: 150px;
+
+.button_container {
+    width: 720px;
+    padding-bottom: 150px;
+    padding-left: 150px;
+}
+
+
+
+
+.second_page_container{
+    display: block;
+}
+.all_pros_container{
+    display: flex;
+}
+
+.pros_container{
+    flex-grow:1;
+}
+.paragraph_container{
+    display: flex;
+    justify-items: center;
+
+}
+.paragraph_header{
+    font-weight: bold;
+    
+    
+}
+.pros_photo{
+    width: 400px;
+    height: 324px;
+}
+
+.paragraph_description{
+    width: 400px;
+    display:flex;
+    justify-content:center;
+    
+}
+.header_container{
+    display:flex;
+    justify-content: center;
+    width: 400px;
+}
+
+.container_for_paragraph{
+    height: 200px;
+    display: flex;
+    justify-content: center;
+}
+
+.size_paragraph{
+    font-size: 30px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+}
+.text{
+    opacity: 0.8;
+    text-align: center;
 }
