third section  finish

--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 .nav {
     display: flex;
     flex-direction: row;
-
     justify-content: space-between;
     width: 100%;
 
@@ -77,9 +76,11 @@ body {
     border-radius: 32px;
     width: 130px;
     height: 35px;
-    font-size: 25px;
+    
 }
-
+.exp{
+    font-size: 16px;
+    }
 .button_container {
     width: 720px;
     padding-bottom: 150px;
@@ -151,6 +152,7 @@ body {
     width: 712px;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .right_side{
@@ -176,4 +178,19 @@ body {
     padding-left: 8px;
     font-size: 25.5px;
     font-weight: normal;
+}
+
+.btn_third_sector{
+    width: 400px;
+}
+
+.book_now{
+    border-radius: 32px;
+    width: 130px;
+    height: 35px;
+    
+}
+
+.book{
+font-size: 16px;
 }
