--- a/style.css
+++ b/style.css
@@ -12,14 +12,12 @@ body {
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-
 }
 
 .link_flex_container {
     display: flex;
     justify-content: flex-end;
     width: 80%;
-
 }
 
 .logo {
@@ -240,6 +238,84 @@ font-size: 16px;
     height:402px;
     display:flex;
     align-items: flex-end;
-    
     margin-left: 100px;
+}
+.fifth_page_container{
+    display:flex;
+    height: 300px;
+    width:936px;
+}
+.newsletter{
+  display:flex;
+  width:468px;
+  align-items: center;
+  padding-left: 32px;
+}
+.input_newsletter{
+width:468px;
+}
+
+.input_header{
+    padding-bottom: 56px;
+}
+
+.newsletter_info{
+    opacity: 0.7;
+}
+
+.email{
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 1px solid black;
+}
+
+.bot_nav_container{
+    display:flex;
+    width: 468px;
+    height: 300px;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+.nav_container{
+    width: 117px; 
+}
+
+.bot_nav{
+    width: 351px;
+    height: 150px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.nav{
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+.last_footer_wrapper{
+    width: 905px;
+  
+}
+.footer_box{
+    width: 72px;
+}
+.privacy{
+    width:60px;
+}
+.footer_box:last-child{
+    width:96px;
+}
+.last_footer{
+    width: 905px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+
+}
+
+.footer_par{
+    font-size: 8px;
+    opacity: 0.2;
 }
