--- a/style.css
+++ b/style.css
@@ -1,65 +1,62 @@
-body {
+/* reset values to default */
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
-
-
-
+body {
+  font-family: "Roboto", sans-serif;
+  color: #1c1d21;
+}
+/* base styles */
+a {
+  color: #1c1d21;
+}
 footer {
   max-width: 1440px;
 }
 
-.position_rel{
-    position:relative;
+.flex {
+  display: flex;
 }
 
-.green_section{
-    background-color:#D9DCD7 ;  
-    width:100%;
+.flex-j-center {
+  display: flex;
+  justify-content: center;
 }
 
-.green{
-    width:100%;
-    height: 30px;
-    background-color:#D9DCD7 ;
-    position:fixed;
+.section_title {
+  margin: 88px auto;
+  font-size: 36px;
+  font-weight: 400;
+  text-align: center;
+  line-height: 119.5%;
 }
 
-.section_wrapper{
-    margin: 0 auto;
-    width: 1218px;
+.section_wrapper {
+  margin: 0 auto;
+  max-width: 1440px;
+}
+
+/* sections styles */
+.header {
+  position: relative;
+}
+.header_wrapper {
+  position: fixed;
+  width: 100%;
+  background-color: #d9dcd7;
+  padding: 32px 0;
 }
 
 .section_hero {
-    padding-bottom: 84px;
-    background-color: #D9DCD7;
-   
-    margin: 0 auto;
-  }
-
-.section {
-    /*  padding: 0 103px 0 105px;*/
-    margin: 0 auto;
-  }
-
-
-.color {
-  background-color: #D9DCD7;
-
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  color: #1C1D21;
-}
-
-.header {
-  display: flex;
-  height: 30px;
+  padding-bottom: 84px;
+  background-color: #d9dcd7;
+  margin: 0 auto;
 }
 
 .nav {
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   width: 100%;
 }
@@ -75,16 +72,15 @@ body {
 }
 
 .links {
-  margin: 0px 10px;
+  margin: 0 10px;
   text-decoration: none;
-  color: black;
   text-transform: capitalize;
   font-size: 25px;
 }
 
-.sign_container{
-    display:flex;
-    justify-content: flex-end;
+.sign_container {
+  display: flex;
+  justify-content: flex-end;
 }
 .sign {
   text-decoration: none;
@@ -93,12 +89,9 @@ body {
   font-size: 25px;
 }
 
-
-.pink{
-    background-color: #ECE0E0 ;
+.pink {
+  background-color: #ece0e0;
 }
-
-
 
 .section_container {
   display: flex;
@@ -122,54 +115,34 @@ body {
   flex-direction: column;
   width: 605px;
   padding-bottom: 65px;
-
-}
-
-.invite_phrase {
-  margin-block-start: 0em;
-  margin-block-end: 0em;
 }
 
 .catch_phrase .invite_phrase {
   text-align: left;
-  font-family: 'Roboto', sans-serif;
   font-size: 96px;
   font-weight: 400;
-
 }
 
 .photo {
   padding-bottom: 65px;
-
 }
 
 .button_container {
   display: flex;
   justify-content: flex-start;
   width: 609px;
-
 }
 
 .btn {
   border-radius: 32px;
   padding: 9px 30px;
   font-size: 16px;
-  background-color: #D9DCD7;
-
+  background-color: #d9dcd7;
 }
 
 /* TODO: order styles by sections/content */
 .second_page_container {
   padding-bottom: 120px;
-}
-
-.section_title {
-  margin: 88px 0;
-  font-size: 36px;
-  font-weight: 400;
-  font-size: 36px;
-  text-align: center;
-  line-height: 119.5%;
 }
 
 .all_pros_container {
@@ -178,14 +151,11 @@ body {
 }
 
 .high_way {
-  margin: 0px 8px;
+  margin: 0 8px;
 }
-
 
 .paragraph_header {
   font-weight: bold;
-
-
 }
 
 .pros_photo {
@@ -195,34 +165,15 @@ body {
 
 .paragraph_description {
   width: 400px;
-  display: flex;
-  justify-content: center;
-
 }
 
 .header_container {
-  display: flex;
-  justify-content: center;
   width: 400px;
-}
-
-.container_for_paragraph {
-  height: 200px;
-  display: flex;
-  justify-content: center;
 }
 
 .text {
   opacity: 0.8;
   text-align: center;
-}
-
-
-
-
-.third_page_container {
-  display: flex;
-  max-width: 1440px;
 }
 
 .left_side {
@@ -232,7 +183,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #ECE0E0;
+  background-color: #ece0e0;
 }
 
 .right_side {
@@ -249,7 +200,7 @@ body {
   width: 400px;
   height: 220px;
   text-align: left;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .longer_paragraph {
@@ -260,8 +211,6 @@ body {
 .third_page_header {
   padding-left: 8px;
   font-size: 25.5px;
-  font-weight: normal;
-  
 }
 
 .btn_third_sector {
@@ -272,19 +221,15 @@ body {
   border-radius: 32px;
   width: 130px;
   height: 35px;
-  background-color: #ECE0E0;
-
+  background-color: #ece0e0;
 }
 
 .book {
   font-size: 16px;
 }
-.section.section.fourth_page_container{
-    max-width: 1440px;
-}
+
 .fourth_page_container {
   display: flex;
-
 }
 
 .girl_pic {
@@ -303,9 +248,6 @@ body {
   height: 704px;
   display: flex;
   flex-direction: column;
-
-
-
 }
 
 .fan_number {
@@ -313,19 +255,16 @@ body {
   height: 302px;
   display: flex;
   align-items: center;
-
-
 }
 
 .cabin_lovers {
   font-size: 48px;
   font-weight: normal;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin-block-start: 0em;
   margin-block-end: 0em;
   margin-inline-start: 100px;
   margin-inline-end: 0px;
-
 }
 
 .autor {
@@ -394,7 +333,6 @@ body {
 .footer_box {
   width: 300px;
   display: flex;
-  flex-direction: row;
   align-items: flex-end;
 }
 
@@ -402,17 +340,11 @@ body {
   width: 60px;
 }
 
-.last_footer_wrapper {
-  width: 1336px;
-}
-
 .last_footer {
   width: 905px;
   display: flex;
-  flex-direction: row;
   justify-content: flex-end;
   width: 1336px;
-
 }
 
 .footer_par {
@@ -420,12 +352,12 @@ body {
   padding-left: 4px;
 }
 
-.foot_section{
-    max-width: 1440px;
+.foot_section {
+  max-width: 1440px;
 }
-.foot_link{
-    text-decoration: none;
-    color:#D9D8D6;
+.foot_link {
+  text-decoration: none;
+  color: #d9d8d6;
 }
 .footer_list {
   display: flex;
@@ -447,7 +379,7 @@ body {
 
 .numbers_fourth_page {
   padding-left: 15px;
-  font-size: 20px
+  font-size: 20px;
 }
 
 .anchor_number {
