--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: "Roboto", sans-serif;
   color: #1c1d21;
+  margin:0;
 }
 /* base styles */
 a {
@@ -25,7 +26,7 @@ footer {
   justify-content: center;
 }
 
-.section_title {
+.section_heading {
   margin: 88px auto;
   font-size: 36px;
   font-weight: 400;
@@ -156,6 +157,7 @@ footer {
 
 .paragraph_header {
   font-weight: bold;
+  margin-bottom: 24px;
 }
 
 .pros_photo {
@@ -165,21 +167,24 @@ footer {
 
 .paragraph_description {
   width: 400px;
+  line-height: 24px;
 }
 
 .header_container {
   width: 400px;
+  display: flex;
+  justify-content: center;
 }
 
 .text {
-  opacity: 0.8;
+color: rgba(0, 0, 0, 0.46);
   text-align: center;
+  font-size: 16px;
 }
 
 .left_side {
   display: flex;
-  height: 811px;
-  width: 712px;
+  width: 100%;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -200,11 +205,10 @@ footer {
   width: 400px;
   height: 220px;
   text-align: left;
-  font-family: "Roboto", sans-serif;
 }
 
 .longer_paragraph {
-  opacity: 0.7;
+  color: rgba(0, 0, 0, 0.46);
   font-size: 17px;
 }
 
@@ -226,10 +230,6 @@ footer {
 
 .book {
   font-size: 16px;
-}
-
-.fourth_page_container {
-  display: flex;
 }
 
 .girl_pic {
@@ -261,25 +261,15 @@ footer {
   font-size: 48px;
   font-weight: normal;
   font-family: "Roboto", sans-serif;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 100px;
-  margin-inline-end: 0px;
+  margin: 0 0 0 100px;
 }
 
 .autor {
-  width: 936px;
   height: 402px;
   display: flex;
   align-items: flex-end;
   margin-left: 100px;
   justify-content: flex-start;
-}
-
-.fifth_page_container {
-  display: flex;
-  height: 300px;
-  max-width: 1440px;
 }
 
 .newsletter {
@@ -299,7 +289,7 @@ footer {
 }
 
 .newsletter_info {
-  opacity: 0.7;
+   color: rgba(0, 0, 0, 0.46);
 }
 
 .email {
@@ -388,4 +378,8 @@ footer {
 
 .fourth_page_footer {
   font-size: 20px;
+}
+.bot_list{
+    text-decoration: none;
+    padding-bottom: 15px;
 }
