--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ footer {
   display: flex;
   justify-content: flex-end;
   width: 80%;
+  list-style-type: none;
 }
 
 .logo {
@@ -358,11 +359,7 @@ color: rgba(0, 0, 0, 0.46);
 .unordered_list_for_numbers {
   list-style-type: none;
   display: flex;
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 0px;
+  margin: 0;
   width: 468px;
   justify-content: flex-end;
 }
